--- a/app/templates/index.phtml
+++ b/app/templates/index.phtml
@@ -1,3 +1,12 @@
+<?php
+
+    $db = new MySQL();
+    $query = $db->query("select * from users");
+    while($row = $db->fetch_array($query))
+    {
+        echo $row['username'];
+    }
+?>
 <!DOCTYPE html>
 <html>
     <head>
