--- a/app/templates/index.phtml
+++ b/app/templates/index.phtml
@@ -6,6 +6,12 @@
     {
         echo $row['username'];
     }
+
+
+    $sql_arr = array();
+    $sql_arr[0] = "insert into users_profiles (user_profile_id, profile_name) values (0,'sebas')";
+    $sql_arr[1] = "insert into users_profiles (user_profile_id, profile_name) values (2,'sebas')";
+    echo $db->transaction($sql_arr);
 ?>
 <!DOCTYPE html>
 <html>
