--- a/app/templates/index.phtml
+++ b/app/templates/index.phtml
@@ -4,13 +4,13 @@
     $query = $db->query("select * from users");
     while($row = $db->fetch_array($query))
     {
-        echo $row['username'];
+        //echo $row['username'];
     }
 
 
     $sql_arr = array();
     $sql_arr[0] = "insert into users_profiles (user_profile_id, profile_name) values (0,'sebas')";
-    $sql_arr[1] = "insert into users_profiles (user_profile_id, profile_name) values (2,'sebas')";
+    $sql_arr[1] = "insert into users_profiles (user_profile_id, profile_name) values (0,'sebas')";
     echo $db->transaction($sql_arr);
 ?>
 <!DOCTYPE html>
